tests/invalid/runtime/index_set_list_oob.pts
function main() : void {
    list<string> values = ["a"];
    values[5] = "x";
    Sys.print("never");
}
